# CANGUI

./: README.md  cangui.py
c++/: CMakeLists.txt  main.cpp  settings.json
f103-puttingalltogether3/: .cproject  f103-puttingalltogether3 Debug.launch  f103-puttingalltogether3.ioc
f103-puttingalltogether3/Core/Src/: serialcan.c  stm32f1xx_hal_msp.c
f103-puttingalltogether3/Debug/: makefile
f103-puttingalltogether3/Debug/Core/Src/: stm32f1xx_hal_msp.cyclo  stm32f1xx_it.su  subdir.mk
f302-serialcan4/: .cproject  .project  STM32F302RCTX_FLASH.ld  f302-serialcan4 Debug.launch  f302-serialcan4.ioc
f302-serialcan4/Core/Inc/: stm32f3xx_hal_conf.h
f302-serialcan4/Core/Src/: stm32f3xx_hal_msp.c  stm32f3xx_it.c
f302-serialcan4/Debug/: f302-serialcan4.elf  f302-serialcan4.list
f302-serialcan4/Debug/Core/Src/: serialcan.cyclo  serialcan.d  stm32f3xx_hal_msp.d  stm32f3xx_hal_msp.su  stm32f3xx_it.cyclo  stm32f3xx_it.d  stm32f3xx_it.su  subdir.mk  system_stm32f3xx.d
f302-serialcan4/Debug/Core/Startup/: subdir.mk
stm32 projects/: readme.txt
stm32 projects/f103-puttingalltogether3/: .mxproject  .project
stm32 projects/f103-puttingalltogether3/Core/Inc/: stm32f1xx_it.h
stm32 projects/f103-puttingalltogether3/Debug/: f103-puttingalltogether3.elf  f103-puttingalltogether3.list  f103-puttingalltogether3.map  objects.list
stm32 projects/f302-serialcan4/: .cproject  .mxproject  .project  f302-serialcan4 Debug.launch  f302-serialcan4.ioc
stm32 projects/f302-serialcan4/Debug/: f302-serialcan4.map  makefile  objects.list
(+34 files in other folders)
